# Large-Language-Model

./: .gitignore  README.md  all_modules.py  attention_mechanisms.ipynb  evaluate_personal_assistant.ipynb  finetuned_classifier.ipynb  finetuned_personal_assistant.ipynb  input_embeddings_generator.ipynb  large_language_model.ipynb  load_pretrained_model.ipynb  pyproject.toml  requirements.txt  transformer_block.ipynb
data/: instruction-data-with-response.json
notebooks/: attention_mechanisms.ipynb  finetuned_classifier.ipynb  finetuned_personal_assistant.ipynb  input_embeddings_generator.ipynb  large_language_model.ipynb  load_pretrained_model.ipynb  transformer_block.ipynb
src/large_language_model/: all_modules.py  attention_mechanisms.py  gpt_download.py
summarized_python_files/: large_language_model.py  summary.py
